skeplib/tests/fixtures/sema/invalid/vec_push_type_mismatch.sk
import vec;

fn main() -> Int {
  let xs: Vec[Int] = vec.new();
  vec.push(xs, "bad");
  return 0;
}
